--- a/visualinspection/src/CSS/dash.css
+++ b/visualinspection/src/CSS/dash.css
@@ -1,25 +1,25 @@
 .PHOTO {
     height: 30px;
-    padding-top: 1em;
-    padding-left: 2em;
+    padding-top: 2em;
+    padding-left: 4em;
     text-align: left;
   }
 .Icon1{
     float: right;
-    margin: 0.5em 2.8em 0 0;
     border: 1px solid black;
     border-radius: 50%;
+    margin: 2em 5em 0 0;
 }
 span{
     float: right;
     color: black;
-    margin-right: 2.5em;
+    margin-right: 4.5em;
     margin-left: 90%;
     margin-bottom: 1em;
 }
-table{
-    width: 95%;
-    margin: 0 2em 0 2em;
+.dtable{
+    width: 94vw;
+    margin: 0 3em 0 3em;
     background-color: chocolate; 
     border: 1px solid chocolate;
     border-radius: 10px; 
@@ -52,9 +52,9 @@ tr button:hover{
     top: 1em;
 }
 .GRID{
-    margin:2em 2em 2em 2em;
+    margin:2em 3em 2em 3em;
     display: grid;
-    height: 100%;
+    height: 100vh;
     grid-template-columns: auto auto;
     grid-template-rows: auto auto;
     background-color: chocolate;
@@ -68,6 +68,7 @@ tr button:hover{
     background-color: gainsboro;
     border: 10px solid chocolate;
     border-radius: 20px;
+
 
 }
 .TopRight{
