--- a/visualinspection/src/CSS/log.css
+++ b/visualinspection/src/CSS/log.css
@@ -4,15 +4,17 @@
     border: 1px solid chocolate;
     width: 94vw;
     border-radius: 10px;
-    margin-top: 5em;
-    margin-left: 2em;
+    margin-top: 6em;
+    margin-left: 3em;
 }
 .popup-header{
     display: flex;
     background-color: chocolate;
     justify-content: space-between;
     padding: 0 30px 0 15px;
-    border-bottom: 2px solid white;
+    border: 1px solid white;
+    border-radius: 10px;
+    /* border-bottom: 2px solid white; */
 }
 .popup-header h2{
     color: white;
@@ -22,12 +24,27 @@
     cursor: pointer;
 }
 .maintable{
-    border: 1px solid black;
     width: 70vw;
     height: 5vh;
-    margin: 2em 4em 2em 10em;
+    margin: 2em 4em 2em 13em;
+    border: 1px solid black;
 }
-.trow td{
-    color: white;
-    padding-left: 7em;
+tbody tr{
+    height: 2.5em;
+    border-bottom: 1px solid black;
+}
+.Icon{
+    cursor: pointer;
+}
+.video-popup{
+    position: fixed;
+    overflow-y: scroll;
+    overflow: hidden;
+    max-height: 100%;
+    top: 8em;
+}
+@media screen and (max-width:1200px) {
+    .maintable{
+        margin: 2em 4em 2em 10em;
+    }
 }
