--- a/imagec/src/compoonents/carousel.css
+++ b/imagec/src/compoonents/carousel.css
@@ -2,9 +2,41 @@
     width: 60%;
     height: 700px;
     background-color: black;
+    border: none;
+    border-radius: 10px;
 }
 .carouselinner{
     height: 100%;
     width: 100%;
-    
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
 }
+.carouselinner .left{
+    flex: 5%;
+    height: 100%;
+    background-color: rgb(0,0,0,0.6);
+    display: grid;
+    place-content: center;
+    color: white;
+    cursor: pointer;
+}
+.carouselinner .right{
+    flex: 5%;
+    height: 100%;
+    background-color: rgb(0,0,0,0.6);
+    display: grid;
+     place-content: center;
+    color: white;
+    cursor: pointer;
+}
+.carouselinner .center{
+    flex: 90%;
+    height: 100%;
+    color: white;
+    font-family: 'Times New Roman', Times, serif;
+    text-align: center;
+}
+
+
