--- a/media/src/App.css
+++ b/media/src/App.css
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  
+  background-image: url('./assets/music1.jpg');
 }
 body{
   margin:0;
